Remove unused data
