# services/api/src/modules/countries/countries.service.ts
@@ -1,6 +1,5 @@
 import { Country } from '@prisma/client';
 import { prismaClient } from '../../common/libs/prisma';
-import { CountryGoogleTrends } from './countries.types';
 
 export class CountriesService {
   async getCountries() {
@@ -9,30 +8,25 @@ export class CountriesService {
         currencies: { select: { currency: true } },
         languages: { select: { language: true } },
         organizations: { select: { organization: true } },
+        googleTrends: { select: { queries: true } },
       },
     });
     return countries.map((country) => {
+      const googleTrends: string[] = country.googleTrends.map(({ queries }) => queries)[0] ?? [];
       return {
         ...country,
         currencies: country.currencies.map(({ currency }) => currency),
         languages: country.languages.map(({ language }) => language),
         organizations: country.organizations.map(({ organization }) => organization),
+        googleTrends,
       };
     });
   }
 
   async getCountry(code: string): Promise<Country> {
     const country: Country = await prismaClient.country.findFirstOrThrow({
-      where: { OR: [{ cca2: code }, { cca3: code }] },
+      where: { OR: [{ code }, { cca2: code }, { cca3: code }] },
     });
     return country;
-  }
-
-  async getGoogleTrends(): Promise<Pick<Country, CountryGoogleTrends>[]> {
-    const countries: Pick<Country, CountryGoogleTrends>[] = await prismaClient.country.findMany({
-      select: { commonName: true, region: true, subregion: true, googleTrends: true },
-      where: { googleTrends: { isEmpty: false } },
-    });
-    return countries;
   }
 }
